more strict compile time checks